# knowledge

./: .prettierrc  README.md  pyproject.toml  zensical.toml
docs/becoming-a-pilot/: index.md
local_extensions/: __init__.py
