[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "Wiki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
include = ["local_extensions*"]

[dependency-groups]
dev = [
    "rumdl>=0.1.72",
    "zensical>=0.0.32",
]
